--- a/src/index.html
+++ b/src/index.html
@@ -50,8 +50,8 @@
     <link rel="stylesheet" href="assets/css/responsive.css">
       <!-- Favicon -->
       <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png">
-      <link rel="icon" type="image/png" href="assets/images/icon/logo.png" sizes="32x32">
-      <link rel="icon" type="image/png" href="assets/images/icon/logo.png" sizes="16x16">
+      <link rel="icon" type="image/png" href="assets/images/icon/logo.svg" sizes="32x32">
+      <link rel="icon" type="image/png" href="assets/images/icon/logo.svg" sizes="16x16">
 
       <!-- Fixing Internet Explorer-->
       <!--[if lt IE 9]>
